--- a/admission-form.html
+++ b/admission-form.html
@@ -15,10 +15,10 @@
 
  <nav class="navbar navbar-expand-sm navbar-light fixed-top">
 	<div class="container">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarCOntent">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<a class="navbar-brand mr-auto" href="#"><b>Blooming Buds High School</b></a>       
+		<a class="navbar-brand mr-auto" href="#"><b>Blooming Buds High School</b></a>   
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#NavbarContent" aria-controls="NavbarContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>       
 		<div class="collapse navbar-collapse justify-content-end" id="NavbarCOntent" >
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
@@ -53,14 +53,11 @@
   		
 	  </section>
 	  
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-
 <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
 
   <!-- ---------------------- End of Admission ------------------------- -->    
 
